Cambios en la encuesta de satisfacción
Cambio en el tamaño de la fuente, se agregaron nuevos valores a la tabla de encuesta de satisfacción así como en el modelo.

--- a/res/layout/nueva_encuesta_parte1.xml
+++ b/res/layout/nueva_encuesta_parte1.xml
@@ -9,6 +9,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="30dp"
             android:text="1. ¿Qué le motivó a Ud. ingresar a su hijo/a en el proyecto ? Puede seleccionar más de una respuesta, e indique su nivel de conformidad a cada opción."
+            android:textAppearance="@style/TextViewEstiloSeguimiento"
             android:textStyle="bold" />
 
     <CheckBox
@@ -49,31 +50,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP1Clicked"/>
         <RadioButton android:id="@+id/radioAtenMedica2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP1Clicked"/>
         <RadioButton android:id="@+id/radioAtenMedica3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP1Clicked"/>
         <RadioButton android:id="@+id/radioAtenMedica4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP1Clicked"/>
         <RadioButton android:id="@+id/radioAtenMedica5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP1Clicked"/>
     </RadioGroup>
 
@@ -117,31 +118,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP2Clicked"/>
         <RadioButton android:id="@+id/radioFamAmistadesP2_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP2Clicked"/>
         <RadioButton android:id="@+id/radioFamAmistadesP2_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP2Clicked"/>
         <RadioButton android:id="@+id/radioFamAmistadesP2_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP2Clicked"/>
         <RadioButton android:id="@+id/radioFamAmistadesP2_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP2Clicked"/>
     </RadioGroup>
 
@@ -184,31 +185,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP3Clicked"/>
         <RadioButton android:id="@+id/radioDesicionPropiaP3_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP3Clicked"/>
         <RadioButton android:id="@+id/radioDesicionPropiaP3_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP3Clicked"/>
         <RadioButton android:id="@+id/radioDesicionPropiaP3_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP3Clicked"/>
         <RadioButton android:id="@+id/radioDesicionPropiaP3_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP3Clicked"/>
     </RadioGroup>
 
@@ -251,31 +252,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP4Clicked"/>
         <RadioButton android:id="@+id/radioObsequiosP4_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP4Clicked"/>
         <RadioButton android:id="@+id/radioObsequiosP4_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP4Clicked"/>
         <RadioButton android:id="@+id/radioObsequiosP4_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP4Clicked"/>
         <RadioButton android:id="@+id/radioObsequiosP4_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP4Clicked"/>
     </RadioGroup>
 
@@ -318,31 +319,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP5Clicked"/>
         <RadioButton android:id="@+id/radioAyudaComunidadP5_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP5Clicked"/>
         <RadioButton android:id="@+id/radioAyudaComunidadP5_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP5Clicked"/>
         <RadioButton android:id="@+id/radioAyudaComunidadP5_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP5Clicked"/>
         <RadioButton android:id="@+id/radioAyudaComunidadP5_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP5Clicked"/>
     </RadioGroup>
 
@@ -393,25 +394,25 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP6Clicked"/>
         <RadioButton android:id="@+id/radioExaLabP6_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP6Clicked"/>
         <RadioButton android:id="@+id/radioExaLabP6_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP6Clicked"/>
         <RadioButton android:id="@+id/radioExaLabP6_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP6Clicked"/>
     </RadioGroup>
 
@@ -454,31 +455,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP7_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP7_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP7_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP7_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP7Clicked"/>
     </RadioGroup>
 
@@ -521,31 +522,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP8Clicked"/>
         <RadioButton android:id="@+id/radioAyudarOtrosP8_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP8Clicked"/>
         <RadioButton android:id="@+id/radioAyudarOtrosP8_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP8Clicked"/>
         <RadioButton android:id="@+id/radioAyudarOtrosP8_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP8Clicked"/>
         <RadioButton android:id="@+id/radioAyudarOtrosP8_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonP8Clicked"/>
     </RadioGroup>
 
