--- a/res/layout/nueva_encuesta_parte2.xml
+++ b/res/layout/nueva_encuesta_parte2.xml
@@ -11,6 +11,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="30dp"
             android:text="2. ¿Por qué ha decidido mantener a su hijo/a durante todo este tiempo en el proyecto? Puede seleccionar más de una respuesta, e indique su acuerdo a cada frase en la escala."
+            android:textAppearance="@style/TextViewEstiloSeguimiento"
             android:textStyle="bold" />
 
     <!--PREGUNTA1-->
@@ -51,25 +52,25 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P1Clicked"/>
         <RadioButton android:id="@+id/radioCalidadAtenMedica2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P1Clicked"/>
         <RadioButton android:id="@+id/radioCalidadAtenMedica3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P1Clicked"/>
         <RadioButton android:id="@+id/radioCalidadAtenMedica4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P1Clicked"/>
         <RadioButton android:id="@+id/radioCalidadAtenMedica5"
                      android:layout_width="wrap_content"
@@ -118,31 +119,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P2Clicked"/>
         <RadioButton android:id="@+id/radioAtencionOportuna2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P2Clicked"/>
         <RadioButton android:id="@+id/radioAtencionOportuna3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P2Clicked"/>
         <RadioButton android:id="@+id/radioAtencionOportuna4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P2Clicked"/>
         <RadioButton android:id="@+id/radioAtencionOportuna5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P2Clicked"/>
     </RadioGroup>
 
@@ -186,31 +187,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P3Clicked"/>
         <RadioButton android:id="@+id/radioCoordinacionHosp2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P3Clicked"/>
         <RadioButton android:id="@+id/radioCoordinacionHosp3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P3Clicked"/>
         <RadioButton android:id="@+id/radioCoordinacionHosp4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P3Clicked"/>
         <RadioButton android:id="@+id/radioCoordinacionHosp5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P3Clicked"/>
     </RadioGroup>
 
@@ -253,31 +254,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P4Clicked"/>
         <RadioButton android:id="@+id/radioInformacionEstadoSalud2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P4Clicked"/>
         <RadioButton android:id="@+id/radioInformacionEstadoSalud3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P4Clicked"/>
         <RadioButton android:id="@+id/radioInformacionEstadoSalud4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P4Clicked"/>
         <RadioButton android:id="@+id/radioInformacionEstadoSalud5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P4Clicked"/>
     </RadioGroup>
 
@@ -320,31 +321,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P5Clicked"/>
         <RadioButton android:id="@+id/radioEnseniaPrevEnfer2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P5Clicked"/>
         <RadioButton android:id="@+id/radioEnseniaPrevEnfer3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P5Clicked"/>
         <RadioButton android:id="@+id/radioEnseniaPrevEnfer4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P5Clicked"/>
         <RadioButton android:id="@+id/radioEnseniaPrevEnfer5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P5Clicked"/>
     </RadioGroup>
 
@@ -387,7 +388,7 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P6Clicked"/>
         <RadioButton android:id="@+id/radioMejoraConoEnfer2"
                      android:layout_width="wrap_content"
@@ -399,19 +400,19 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P6Clicked"/>
         <RadioButton android:id="@+id/radioMejoraConoEnfer4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P6Clicked"/>
         <RadioButton android:id="@+id/radioMejoraConoEnfer5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P6Clicked"/>
     </RadioGroup>
 
@@ -454,31 +455,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP2_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP2_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP2_4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P7Clicked"/>
         <RadioButton android:id="@+id/radioInteresCientificoP2_5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P7Clicked"/>
     </RadioGroup>
 
@@ -521,31 +522,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P8Clicked"/>
         <RadioButton android:id="@+id/radioMejorarTrataDengue2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P8Clicked"/>
         <RadioButton android:id="@+id/radioMejorarTrataDengue3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P8Clicked"/>
         <RadioButton android:id="@+id/radioMejorarTrataDengue4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P8Clicked"/>
         <RadioButton android:id="@+id/radioMejorarTrataDengue5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P8Clicked"/>
     </RadioGroup>
 
@@ -588,31 +589,31 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="1"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P9Clicked"/>
         <RadioButton android:id="@+id/radioNoQuieroQuedarmeEstudio2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="2"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P9Clicked"/>
         <RadioButton android:id="@+id/radioNoQuieroQuedarmeEstudio3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="3"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P9Clicked"/>
         <RadioButton android:id="@+id/radioNoQuieroQuedarmeEstudio4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="4"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P9Clicked"/>
         <RadioButton android:id="@+id/radioNoQuieroQuedarmeEstudio5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
-                     android:layout_marginLeft="7dp"
+                     android:layout_marginLeft="12dp"
                      android:onClick="onRadioButtonPart2P9Clicked"/>
     </RadioGroup>
 
