--- a/res/layout/nueva_encuesta_parte3.xml
+++ b/res/layout/nueva_encuesta_parte3.xml
@@ -9,6 +9,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="18dp"
             android:text="3. ¿Ud. Ha presentado alguna dificultad de buscar atención de salud para su hijo/a en el proyecto en algún momento?"
+            android:textStyle="bold"
             android:textAppearance="@style/TextViewEstiloSeguimiento" />
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -28,7 +29,7 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="No"
-                     android:layout_marginLeft="10dp"
+                     android:layout_marginLeft="15dp"
                      android:onClick="onRadioDificultadBuscarAtencionClicked"/>
 
     </RadioGroup>
